Fix vert align issue on login/ signup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,19 +19,30 @@
   border: solid 1px #CCC;
   border-radius: 5px;
   padding: 10px 50px 10px 50px;
-  top: calc(50vh - 125px);
+  // top: calc(50vh - 125px);
 }
 
 .maxwidth {
   width: 100%;
 }
 
+.spacer {
+  min-height: 20%;
+  height: 200px;
+}
+
 .vert-align {
-  position: relative;
-  top: 50%;
-  transform: translateY(50%);
-  // max-height: 250px;
+  // display: block;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   // position: absolute;
+}
+
+.outerDiv {
+  height: 100%;
 }
 
 body {
